test/indexReplace3.slq

def main(){
	a:=vector(2,0:ğ”¹);
	a[1]=1:ğ”¹;
	(H(a[0]),a[1]):=(a[1],H(a[0])); // error
}
